test/scc/type/semantic-errors/004.a
004.t:3:5: error: size of array must be greater than zero